[package]
name = "wintun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.2", features = [ "guid", "v4" ] }

[dependencies.winapi]
version = "0.3.9"
features = [
    "minwindef", "ifdef", "libloaderapi", "errhandlingapi", "winerror", "synchapi",
    "winbase",
]
